# ts-scientific-data-and-ai-cloud-pipeline-examples

./: .gitignore  Contributing.md  LICENSE  README.md
ci_cd/: README.md  github_publish_artifacts.yml
examples/all-in-one-ids-task-script-protocol/: .gitignore  CONTRIBUTING.md  README.md  config.json  main.py  manifest.json  pyproject.toml
examples/all-in-one-ids-task-script-protocol/__tests__/integration/: test_main.py
examples/all-in-one-ids-task-script-protocol/__tests__/schema/: test_ids.py
examples/all-in-one-ids-task-script-protocol/__tests__/unit/: test_parse.py
examples/all-in-one-ids-task-script-protocol/example-input/: example_file.txt
examples/all-in-one-ids-task-script-protocol/example-output/: example_file.txt.json
examples/all-in-one-ids-task-script-protocol/ids/: README.md  athena.json  elasticsearch.json  expected.json  expected.py  manifest.json  pyproject.toml  schema.json  schema.py
examples/all-in-one-ids-task-script-protocol/ids/__tests__/schema/: test_ids.py
examples/all-in-one-ids-task-script-protocol/ids/demo_ssp_ids/: expected.py  schema.py
examples/all-in-one-ids-task-script-protocol/protocol/: README.md  manifest.json  protocol.yml
examples/all-in-one-ids-task-script-protocol/task_script/: config.json  main.py  manifest.json  parse.py  pyproject.toml
examples/all-in-one-ids-task-script-protocol/task_script/__tests__/integration/: test_main.py
examples/all-in-one-ids-task-script-protocol/task_script/__tests__/unit/: test_parse.py
examples/all-in-one-ids-task-script-protocol/task_script/demo_ssp_task_script/: parse.py
examples/all-in-one-ids-task-script-protocol/task_script/tools/: generate_requirements.py
examples/all-in-one-ids-task-script-protocol/tools/: generate_requirements.py
examples/basic-repo-testing/: context.txt  deploy.sh
examples/basic-repo-testing/testing-protocol/: protocol.yml
examples/basic-repo-testing/testing-taskscript/: config.json  main.py
examples/basic-repo-testing/testing-taskscript/__tests__/: test_use_context_api_actual.py
examples/basic-repo-testing/testing-taskscript/data/: raw_envision.json
examples/basic-repo-testing/testing-taskscript/src/: use_context_api_actual.py
examples/dataweave-exec/protocol-dataweave-exec/: protocol.yml
examples/dataweave-exec/taskscript-dataweave-exec/: config.json  main.py  requirements.txt
examples/fail-succeed/: a_get_experiment.py  b_create_experiment_and_send_data  c_send_data  fail.json  protocol.yml  succeed.json
examples/fail-succeed-alt/: a_get_experiment.py  b_create_experiment  c_send_data  protocol.yml
examples/multistep-ssp/: deploy-multistep.txt  enrichment-file.txt  ssp-demo.json
examples/multistep-ssp/protocol-multistep/: protocol.yml
examples/multistep-ssp/taskscript-multistep/: config.json  main.py  requirements.txt
examples/multistep-ssp/taskscript-multistep/init/: before_install
examples/r-exec-ssp/protocol-r-exec-ssp/: README.md  e2e_test_configuration.json  manifest.json  protocol.yml
examples/r-exec-ssp/taskscript-r-exec-ssp/: CONTRIBUTING.md  README-internal.md  README.md  config.json  main.py  manifest.json  pyproject.toml
examples/r-exec-ssp/taskscript-r-exec-ssp/init/: before_install
examples/r-exec-ssp/taskscript-r-exec-ssp/ts_task_script_r_exec/: parse.py
examples/using-r-scripts/protocol-using-r/: protocol.yml
examples/using-r-scripts/taskscript-using-r/: config.json  main.py  pyproject.toml
examples/using-r-scripts/taskscript-using-r/init/: before_install
examples/using-r-scripts/taskscript-using-r/r-scripts/: basic-math.R
