[tool.poetry]
name = "all-in-one-demo"
version = "0.1.0"
description = "Tools for all-in-one-demo"
authors = ["Author"]
readme = "README.md"
packages = [{ include = "tools" }]

# TODO Update these package source(s) to your own internal package source if relevant
[[tool.poetry.source]]
name = "pypi"
priority = "supplemental"

[[tool.poetry.source]]
name = "ts_pypi_virtual"
url = "https://tetrascience.jfrog.io/artifactory/api/pypi/ts-pypi-virtual/simple"
priority = "primary"

[tool.poetry.scripts]
generate-requirements = "tools.generate_requirements:generate_requirements"

[tool.poetry.dependencies]
python = "~3.11"
importlib-metadata = { version = ">=5.0", python = "<3.8" }

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"